# BookGraph

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  tmp
bookgraph/: book_tree.py  loader.py  main.py  mermaid.js  mermaid.py  reader.py  util.py
bookgraph/db/: load_db.py  loader.py
notebook/: exp.ipynb
src/: book_tree.py  reader.py  util.py
