[tool.poetry]
name = "bookgraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "bookgraph" }]

[tool.poetry.dependencies]
python = ">=3.12.0, <3.13"
jaal = "^0.1.7"
cshogi = "^0.8.5"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
